# jatr

./: .gitignore  Cargo.toml  other.tasks.kdl  tasks.example.yaml  tasks.kdl  tasks.schema.json
examples/: tasks.kdl
src/: kdl_parser.rs  main.rs  output.rs  runner.rs  tasks.rs  templater.rs  utils.rs
src/kdl/: actions.rs  mod.rs  tasks.rs  variables.rs
src/reader/: mod.rs  node.rs  parser.rs
src/runner/: environment.rs  mod.rs  output.rs  templating.rs
